--- a/index.html
+++ b/index.html
@@ -39,18 +39,17 @@
     <nav id="colorlib-main-nav" role="navigation">
       <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle active"><i></i></a>
       <div class="js-fullheight colorlib-table">
-        <div class="img" style="background-image: url(images/author-2.jpg);"></div>
+        <div class="img" style="background-image: url(images/author-1.jpg);"></div>
         <div class="colorlib-table-cell js-fullheight">
           <div class="row no-gutters">
             <div class="col-md-12 text-center">
               <h1 class="mb-4"><a href="index.html" class="logo">MAO</a></h1>
               <ul>
-                <li class="active"><a href="index.html"><span><small>01</small>Home</span></a></li>
-                <li><a href="about.html"><span><small>02</small>Resume</span></a></li>
-                <li><a href="services.html"><span><small>03</small>Skills</span></a></li>
-                <li><a href="portfolio.html"><span><small>04</small>Portfolio</span></a></li>
-                <li><a href="blog.html"><span><small>05</small>Blog</span></a></li>
-                <li><a href="contact.html"><span><small>06</small>Contact</span></a></li>
+                <li><a href="index.html"><span><small>01</small>Home</span></a></li>
+                <li><a href="#aboutme"><span><small>02</small>About me</span></a></li>
+                <li><a href="#myskills"><span><small>03</small>Skills</span></a></li>
+                <li><a href="#projects"><span><small>04</small>Portfolio</span></a></li>
+                <li><a href="#footer"><span><small>05</small>Contact</span></a></li>
               </ul>
             </div>
           </div>
@@ -103,7 +102,7 @@
       </section>
       <!-- END slider -->
 
-      <section class="ftco-section about-section">
+      <section id="aboutme" class="ftco-section about-section">
         <div class="container">
           <div class="row d-flex" data-scrollax-parent="true">
             <div class="col-md-4 author-img" style="background-image: url(images/author-1.jpg);"
@@ -133,12 +132,12 @@
         </div>
       </section>
 
-      <section class="ftco-section">
+      <section id="myskills" class="ftco-section">
         <div class="container">
           <div class="row justify-content-center mb-5 pb-5">
             <div class="col-md-7 text-center heading-section ftco-animate">
               <span>What i do</span>
-              <h2>My services</h2>
+              <h2>My Skills</h2>
             </div>
           </div>
             <div id="skillCanvasContainer">
@@ -183,170 +182,63 @@
         </div>
       </section>
 
-      <section class="ftco-section">
+      <section id="projects" class="ftco-section">
         <div class="container">
           <div class="row justify-content-center mb-5 pb-5">
             <div class="col-md-7 text-center heading-section ftco-animate">
-              <span>Portfolio</span>
+              <span>Projects</span>
               <h2>Checkout a few of my works</h2>
             </div>
           </div>
           <div class="row no-gutters">
             <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-              <a href="portfolio-single.html" class="image d-flex justify-content-center align-items-center"
-                style="background-image: url('images/work-1.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
+              <a href="https://kivimenu.com" class="image d-flex justify-content-center align-items-center"
+                style="background-image: url('https://kivimenu.com/images/logo.png'); " data-scrollax=" properties: { translateY: '-30%'}">
                 <div class="icon d-flex text-center justify-content-center align-items-center">
                   <span class="icon-search"></span>
                 </div>
               </a>
               <div class="text">
-                <h4 class="subheading">Illustration</h4>
-                <h2 class="heading"><a href="portfolio-single.html">Even the all-powerful Pointing has no control</a>
+                <h4 class="subheading">Kivimenu</h4>
+                <h2 class="heading"><a href="https://kivimenu.com">Simplicity to restaurant</a>
                 </h2>
-                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic
-                  life One day however a small line of blind text.</p>
-                <p><a href="#">View Project</a></p>
+                <p>Restoran işletiminde; müşteri ve restoran sahibinin her açısından kolaylık sağlayan kivi menu ile tanışın...</p>
+                <p><a href="https://kivimenu.com">View Project</a></p>
               </div>
             </div>
             <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-              <a href="portfolio-single.html" class="image order-2 d-flex justify-content-center align-items-center"
-                style="background-image: url('images/work-2.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
+              <a href="https://kivimenu.com" class="image order-2 d-flex justify-content-center align-items-center"
+                style="background-image: url('https://res.cloudinary.com/dsdlhtnpw/image/fetch/q_60,w_1000/https%3A%2F%2Fpbs.twimg.com%2Fmedia%2FENnYEq5XYAEGMBg%3Fformat%3Djpg'); " data-scrollax=" properties: { translateY: '-30%'}">
                 <div class="icon d-flex text-center justify-content-center align-items-center">
                   <span class="icon-search"></span>
                 </div>
               </a>
               <div class="text order-1">
-                <h4 class="subheading">Application</h4>
-                <h2 class="heading"><a href="portfoli-singleo.html">Even the all-powerful Pointing has no control</a>
+                <h4 class="subheading">Cryptosozluk</h4>
+                <h2 class="heading"><a href="https://github.com/crypto-sozluk/crypto_sozluk">alternative source of information for cryptocurrency only</a>
                 </h2>
-                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic
-                  life One day however a small line of blind text.</p>
-                <p><a href="#">View Project</a></p>
-              </div>
-            </div>
-            <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-              <a href="portfolio-single.html" class="image d-flex justify-content-center align-items-center"
-                style="background-image: url('images/work-3.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
-                <div class="icon d-flex text-center justify-content-center align-items-center">
-                  <span class="icon-search"></span>
-                </div>
-              </a>
-              <div class="text">
-                <h4 class="subheading">Web Design</h4>
-                <h2 class="heading"><a href="portfolio-single.html">Even the all-powerful Pointing has no control</a>
-                </h2>
-                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic
-                  life One day however a small line of blind text.</p>
-                <p><a href="#">View Project</a></p>
-              </div>
-            </div>
-            <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-              <a href="portfolio-single.html" class="image order-2 d-flex justify-content-center align-items-center"
-                style="background-image: url('images/work-4.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
-                <div class="icon d-flex text-center justify-content-center align-items-center">
-                  <span class="icon-search"></span>
-                </div>
-              </a>
-              <div class="text order-1">
-                <h4 class="subheading">Application</h4>
-                <h2 class="heading"><a href="portfoli-singleo.html">Even the all-powerful Pointing has no control</a>
-                </h2>
-                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic
-                  life One day however a small line of blind text.</p>
-                <p><a href="#">View Project</a></p>
-              </div>
-            </div>
-            <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-              <a href="portfolio-single.html" class="image d-flex justify-content-center align-items-center"
-                style="background-image: url('images/work-5.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
-                <div class="icon d-flex text-center justify-content-center align-items-center">
-                  <span class="icon-search"></span>
-                </div>
-              </a>
-              <div class="text">
-                <h4 class="subheading">Animation</h4>
-                <h2 class="heading"><a href="portfoli-singleo.html">Even the all-powerful Pointing has no control</a>
-                </h2>
-                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic
-                  life One day however a small line of blind text.</p>
-                <p><a href="#">View Project</a></p>
-              </div>
-            </div>
-            <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-              <a href="portfolio-single.html" class="image order-2 d-flex justify-content-center align-items-center"
-                style="background-image: url('images/work-6.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
-                <div class="icon d-flex text-center justify-content-center align-items-center">
-                  <span class="icon-search"></span>
-                </div>
-              </a>
-              <div class="text order-1">
-                <h4 class="subheading">Branding</h4>
-                <h2 class="heading"><a href="portfoli-singleo.html">Even the all-powerful Pointing has no control</a>
-                </h2>
-                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic
-                  life One day however a small line of blind text.</p>
-                <p><a href="#">View Project</a></p>
+                <p>sadece crypto borsası için alternatif bilgi kaynağı.</p>
+                <p><a href="https://github.com/crypto-sozluk/crypto_sozluk">View Project</a></p>
               </div>
             </div>
           </div>
         </div>
       </section>
 
-      <section class="ftco-section ftco-counter" id="section-counter">
-        <div class="container">
-          <div class="row justify-content-center mb-5 pb-5">
-            <div class="col-md-7 text-center heading-section ftco-animate">
-              <span>Portfolio</span>
-              <h2>I love to share my achievements</h2>
-            </div>
-          </div>
-          <div class="row d-flex justify-content-start">
-            <div class="col-md-5 col-sm-5 counter-wrap ftco-animate">
-              <div class="block-18">
-                <div class="text">
-                  <span class="ftco-label">Clients</span>
-                  <strong class="number" data-number="420">0</strong>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="row d-flex justify-content-center">
-            <div class="col-md-5 col-sm-5 counter-wrap ftco-animate">
-              <div class="block-18">
-                <div class="text">
-                  <span class="ftco-label">Project done</span>
-                  <strong class="number" data-number="890">0</strong>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="row d-flex justify-content-end">
-            <div class="col-md-5 counter-wrap ftco-animate">
-              <div class="block-18">
-                <div class="text">
-                  <span class="ftco-label">Cups of coffee</span>
-                  <strong class="number" data-number="1000">0</strong>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <footer class="ftco-footer ftco-bg-dark ftco-section">
+      <footer id="footer" class="ftco-footer ftco-bg-dark ftco-section">
         <div class="container">
           <div class="row mb-5 justify-content-center">
             <div class="col-md-5 text-center">
               <div class="ftco-footer-widget mb-5">
                 <ul class="ftco-footer-social list-unstyled">
-                  <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-                  <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-                  <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
+                  <li><a href="https://github.com/ozkan15"><span class="icon-github"></span></a></li>
+                  <li><a href="https://www.linkedin.com/in/mehmet-akif-%C3%B6zkan-1343b56b/"><span
+                        class="icon-linkedin"></span></a></li>
                 </ul>
               </div>
               <div class="ftco-footer-widget">
-                <h2 class="mb-3">Contact Us</h2>
-                <p class="h3 email"><a href="#">info@email.com</a></p>
+                <h2 class="mb-3">Contact</h2>
+                <p class="h3 email"><a href="mailto:mao@kivimenu.com">mao@kivimenu.com</a></p>
               </div>
             </div>
           </div>
@@ -354,12 +246,7 @@
             <div class="col-md-12 text-center">
 
               <p>
-                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                Copyright &copy;
-                <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made
-                with <i class="icon-heart" aria-hidden="true" style="color: red;"></i> by <a href="https://colorlib.com"
-                  target="_blank">Colorlib</a>
-                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                Mehmet Akıf Ozkan | Personal Website <b><script>document.write(new Date().getFullYear());</script></b>
               </p>
             </div>
           </div>
