--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <li><a href="index.html"><span><small>01</small>Home</span></a></li>
                 <li><a href="#aboutme"><span><small>02</small>About me</span></a></li>
                 <li><a href="#myskills"><span><small>03</small>Skills</span></a></li>
-                <li><a href="#projects"><span><small>04</small>Portfolio</span></a></li>
+                <li><a href="#projects"><span><small>04</small>Projects</span></a></li>
                 <li><a href="#footer"><span><small>05</small>Contact</span></a></li>
               </ul>
             </div>
