--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>MAO - Personal Website</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="icon" href="images/favicon.png" type="image/png" sizes="16x16">
 
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,700" rel="stylesheet">
 
